--- a/css/style.css
+++ b/css/style.css
@@ -102,7 +102,7 @@ a:active, a:focus,input:active, input:focus{outline:0;}
   color:#222;
   transition:.3s;
 }
-a:hover{
+.nav-links a:hover{
   background:gold;
   border-radius:100%;
   transform:rotate(360deg);
